add few tests and little optimisation