@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 @DisplayName("MultipleChoiceQuestionTest")
@@ -16,13 +17,12 @@ public class MultipleChoiceQuestionTest {
         MultipleChoiceQuestion question = MultipleChoiceQuestion.builder()
                 .questionText("Question")
                 .questionDescription("Description")
-                .answers(List.of("Ответ1", "Ответ2"))
+                .answers(Arrays.asList("Ответ1", "Ответ2"))
                 .build();
 
         Assertions.assertEquals("Question", question.getQuestionText());
         Assertions.assertEquals("Description", question.getQuestionDescription());
-        Assertions.assertEquals(List.of("Ответ1", "Ответ2"), question.getAnswers());
+        Assertions.assertEquals(Arrays.asList("Ответ1", "Ответ2"), question.getAnswers());
 
     }
-
 }
